Run ADF test on price and log return to assess stationarity

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -304,6 +304,35 @@
     "# 📈 Visualize log returns\n",
     "plot_log_returns(df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5332607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Test for Price:\n",
+      "  Test Statistic = -1.9914\n",
+      "  p-value = 0.2904\n",
+      "  Stationary: No\n",
+      "\n",
+      "ADF Test for LogReturn:\n",
+      "  Test Statistic = -16.4270\n",
+      "  p-value = 0.0000\n",
+      "  Stationary: Yes\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 📏 Test for stationarity of price and log return\n",
+    "test_stationarity(df['Price'], name=\"Price\")\n",
+    "test_stationarity(df['LogReturn'], name=\"LogReturn\")\n"
+   ]
   }
  ],
  "metadata": {
