Update Folder structure

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "5cb358b7",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "ceb27ac0",
    "metadata": {},
    "outputs": [],
@@ -288,6 +288,53 @@
    ],
    "source": [
     "az.plot_trace(trace, var_names=[\"mu1\", \"mu2\", \"sigma1\", \"sigma2\", \"tau\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca31a887",
+   "metadata": {},
+   "source": [
+    "Trace Plot Analysis – MCMC Convergence & Parameter Distributions\n",
+    "\n",
+    "This visualization combines two key aspects for each parameter:\n",
+    "\n",
+    "Left side: Posterior distribution (how likely each parameter value is after seeing the data)\n",
+    "\n",
+    "Right side: Trace plot (sampling path from Markov Chain Monte Carlo)\n",
+    "\n",
+    "🧠 What This Is Telling Us\n",
+    "This plot helps us trust the model's results. It checks whether:\n",
+    "\n",
+    "The parameter estimates are stable\n",
+    "\n",
+    "The model has explored the parameter space well\n",
+    "\n",
+    "The results are interpretable for business or economic insight\n",
+    "\n",
+    "🔍 Parameter-by-Parameter Interpretation\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Parameter\tMeaning in Oil Price Context\tTechnical Interpretation\n",
+    "mu1\tAverage return (price change rate) before a structural shift\tPosterior centered around ~0 → little or no consistent price trend before the shift\n",
+    "mu2\tAverage return after the shift\tAlso ~0 → no sustained trend after the shift either\n",
+    "sigma1\tVolatility (price fluctuations) before change point\tLower variance (~0.023), meaning the oil market was relatively stable\n",
+    "sigma2\tVolatility after change point\tHigher variance (~0.029), indicating increased market instability or shocks\n",
+    "tau\tIndex of the change point in the time series (e.g. when volatility changed)\tSharp peak around 5388, showing a clear and confident detection of when the market behavior changed\n",
+    "\n",
+    "✅ Technical Health Check\n",
+    "All chains converged well: r_hat = 1.0 for every parameter\n",
+    "\n",
+    "No divergences or instability\n",
+    "\n",
+    "Posterior distributions are smooth and unimodal\n",
+    "\n",
+    "Sampling paths (right plots) show no drift, confirming the model explored the space thoroughly\n",
+    "\n",
+    "📌 Overall Message\n",
+    "\"Our Bayesian model has confidently identified a point in the time series (~index 5388) where the volatility of Brent oil prices increased significantly, even though the average return before and after that point remained near zero. This suggests a shift from a stable to a more volatile market, not due to consistent price increase or decrease, but due to unpredictable swings.\""
    ]
   },
   {
