Fix summarize_model_impact to use 'event_name' and 'start_date' after column normalization

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "5cb358b7",
    "metadata": {},
    "outputs": [],
@@ -17,10 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "ceb27ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (pytensor.configdefaults): g++ not available, if using conda: `conda install gxx`\n",
+      "WARNING (pytensor.configdefaults): g++ not detected!  PyTensor will be unable to compile C-implementations and will default to Python. Performance may be severely degraded. To remove this warning, set PyTensor flags cxx to an empty string.\n"
+     ]
+    }
+   ],
    "source": [
     "from data_loader import load_and_clean_data\n",
     "from preprocessing import compute_log_returns\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b47e64ba",
    "metadata": {},
    "outputs": [],
@@ -99,21 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9ce524ed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../data/bayesian_trace.nc'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arviz as az\n",
     "\n",
@@ -123,7 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "id": "f3cfe5df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arviz as az\n",
+    "\n",
+    "# 🔄 Load previously saved posterior trace\n",
+    "trace = az.from_netcdf(\"../results/metrics/bayesian_trace.nc\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e335ca17",
    "metadata": {},
    "outputs": [
@@ -240,7 +251,7 @@
        "tau        466.0    1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "68018a18",
    "metadata": {},
    "outputs": [
@@ -271,7 +282,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d2e9ed30",
    "metadata": {},
    "outputs": [
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "246a4799",
    "metadata": {},
    "outputs": [
@@ -396,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "d92948c8",
    "metadata": {},
    "outputs": [
@@ -409,7 +420,7 @@
        "        <Axes: title={'center': 'tau'}>, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "bd91eb76",
    "metadata": {},
    "outputs": [
@@ -469,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "08828e61",
    "metadata": {},
    "outputs": [
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "c9adfcc3",
    "metadata": {},
    "outputs": [
@@ -522,7 +533,7 @@
        "        <Axes: title={'center': 'mu2\\n3'}>]], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,6 +550,93 @@
    ],
    "source": [
     "az.plot_autocorr(trace, var_names=[\"tau\", \"mu1\", \"mu2\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6446b5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from event_utils import load_event_data\n",
+    "from event_alignment import find_closest_event, summarize_model_impact\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "24805c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reload model_df if needed, ensure change_date is defined\n",
+    "events_df = load_event_data(\"../data/key_events.csv\")\n",
+    "closest_event = find_closest_event(change_date, events_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "be3b59d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Change Point Date: 2008-08-04\n",
+      "\n",
+      "Matched Event: Global Financial Crisis (2008) (2008-09-15)\n",
+      "\n",
+      "Mean Return Shift:\n",
+      "  Before: 0.00034\n",
+      "  After:  -0.00007\n",
+      "  ΔMean:  -0.00041\n",
+      "\n",
+      "Volatility Shift (σ):\n",
+      "  Before: 0.02304\n",
+      "  After:  0.02886\n",
+      "  ΔSigma: 0.00582\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary = summarize_model_impact(trace, change_date, closest_event)\n",
+    "print(summary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8f7101",
+   "metadata": {},
+   "source": [
+    "## 🔎 Change Point Insight – 2008 Global Financial Crisis\n",
+    "\n",
+    "The Bayesian change point model identified a significant structural shift in Brent oil log returns on **August 4, 2008**.\n",
+    "\n",
+    "This change aligns closely with the onset of the **2008 Global Financial Crisis**, specifically the collapse of Lehman Brothers on **September 15, 2008**. The market appears to have begun reacting to instability in the financial system even before the official crisis date.\n",
+    "\n",
+    "### 📈 Quantitative Impact\n",
+    "\n",
+    "- **Mean Return Shift**:\n",
+    "  - Before: **+0.00034**\n",
+    "  - After:  **−0.00007**\n",
+    "  - ΔMean: **−0.00041**\n",
+    "\n",
+    "- **Volatility Shift (σ)**:\n",
+    "  - Before: **0.02304**\n",
+    "  - After:  **0.02886**\n",
+    "  - ΔSigma: **+0.00582**\n",
+    "\n",
+    "### 🧠 Interpretation\n",
+    "\n",
+    "- The **negative shift in mean return** indicates a loss in investor confidence and onset of bearish behavior.\n",
+    "- The **increase in volatility** reflects heightened market uncertainty and potential regime instability.\n",
+    "- This validates the model’s ability to detect early warning signs before major economic events materialize.\n",
+    "\n"
    ]
   }
  ],
